gluetun-wireguard-qbittorrent/repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gluetun-wireguard-qbittorrent
  name: gluetun-wireguard-qbittorrent-service
spec:
  ports:
  - nodePort: 32100
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gluetun-wireguard-qbittorrent
  sessionAffinity: None
  type: LoadBalancer
