gluetun-wireguard-qbittorrent/repo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gluetun-wireguard-qbittorrent-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: qbittorrent.local
    http:
      paths:
      - backend:
          service:
            name: gluetun-wireguard-qbittorrent-service
            port:
              number: 8080
        path: /
        pathType: Prefix
